# Aier

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: base_dialogue.py
src/aier/: __init__.py
src/aier-agent/agent/: __init__.py
src/aier-agent/memory/: __init__.py
src/aier-ai/: model.py  types.py
src/aier-ai/provider/: openai.py
src/aier/agent/: __init__.py
src/aier/agent/agent/: __init__.py  base_agent.py
src/aier/agent/memory/: short_term.py
src/aier/agent/tool/: __init__.py  tool_registry.py
src/aier/ai/: README.md  __init__.py  model.py  tool.py  types.py
src/aier/ai/providers/: __init__.py  base.py  openai.py
src/aier/model/: chat_model.py  types.py
test/: original_openai_chat.py  test_chat.py
