[project]
name = "aier"
version = "0.1.0"
description = "Aier agent framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.16.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aier"]
